--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1010</width>
-    <height>610</height>
+    <width>1012</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -210,6 +210,9 @@
                        <verstretch>0</verstretch>
                       </sizepolicy>
                      </property>
+                     <property name="cursor">
+                      <cursorShape>OpenHandCursor</cursorShape>
+                     </property>
                     </widget>
                    </item>
                   </layout>
@@ -230,6 +233,9 @@
                        <horstretch>0</horstretch>
                        <verstretch>0</verstretch>
                       </sizepolicy>
+                     </property>
+                     <property name="cursor">
+                      <cursorShape>OpenHandCursor</cursorShape>
                      </property>
                     </widget>
                    </item>
@@ -398,6 +404,9 @@
                </item>
                <item>
                 <widget class="QPushButton" name="qtBtn">
+                 <property name="cursor">
+                  <cursorShape>PointingHandCursor</cursorShape>
+                 </property>
                  <property name="text">
                   <string>Qt5</string>
                  </property>
@@ -449,6 +458,9 @@
            </item>
            <item>
             <widget class="QPushButton" name="saveBtn">
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
              <property name="text">
               <string>保存串口数据</string>
              </property>
