--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1016</width>
-    <height>616</height>
+    <width>1018</width>
+    <height>618</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -408,7 +408,7 @@
             </attribute>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="0">
-              <layout class="QGridLayout" name="canvas"/>
+              <widget class="QGraphicsView" name="graphicsView"/>
              </item>
             </layout>
            </widget>
